// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Bulleted table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "bulleted",
    "indent": 1,
    "type": "table",
  },
]
`;

exports[`Table Consecutive table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Simple table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Staggered table: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "4",
            "text": "4",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [
          Object {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [],
      ],
    ],
    "fileName": "Staggered",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Table with empty cells: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "raw": " ",
            "text": " ",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "　",
            "text": "　",
            "type": "plain",
          },
        ],
        Array [
          Object {
            "raw": "  ",
            "text": "  ",
            "type": "plain",
          },
        ],
      ],
      Array [
        Array [],
        Array [],
        Array [],
      ],
    ],
    "fileName": " ",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Table with hashTag: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "href": "tag",
            "raw": "#tag",
            "type": "hashTag",
          },
        ],
        Array [
          Object {
            "raw": "This is",
            "text": "This is",
            "type": "plain",
          },
          Object {
            "raw": " ",
            "text": " ",
            "type": "plain",
          },
          Object {
            "href": "tag",
            "raw": "#tag",
            "type": "hashTag",
          },
        ],
      ],
    ],
    "fileName": "table with hashTag",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Table with link: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "cells": Array [
      Array [
        Array [
          Object {
            "content": "",
            "href": "Link",
            "pathType": "relative",
            "raw": "[Link]",
            "type": "link",
          },
        ],
        Array [
          Object {
            "raw": "This is ",
            "text": "This is ",
            "type": "plain",
          },
          Object {
            "content": "",
            "href": "Link",
            "pathType": "relative",
            "raw": "[Link]",
            "type": "link",
          },
        ],
      ],
    ],
    "fileName": "table with link",
    "indent": 0,
    "type": "table",
  },
]
`;
